# pycon2023_opentelemetry

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  poetry.toml  pyproject.toml  script
config/: collector-agent.yml  collector.yaml  prometheus.yml
config/grafana/provisioning/dashboards/: dashboard.json
config/grafana/provisioning/datasources/: datasource.yaml
pycon_opentelemetry_demo/: log_example.py  metric_example.py  trace_example.py
pycon_opentelemetry_demo/fastapi_example/: main.py
service_a/: main.py
